# HaasAlignDelay

./: .gitignore  CMakeLists.txt  CONTEXT.md
AU/Haas Align Delay.component/Contents/: Info.plist
AU/Haas Align Delay.component/Contents/MacOS/: Haas Align Delay
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AutoPhaseCorrector.h  DelayLine.h  HaasProcessor.h
Source/Presets/: FactoryPresets.h  PresetManager.h
Source/UI/: AnimationSystem.h  CorrelationMeter.h  DelayModule.h  EditorLayout.h  FooterComponent.h  HeaderComponent.h  LevelMeter.h  MeterStrip.h  ModuleComponent.h  ModuleIcons.h  NuroColors.h  NuroLookAndFeel.cpp  NuroLookAndFeel.h  NuroMeter.h  OutputModule.h  PhaseCorrelationMeter.h  PhaseModule.h  PresetSelector.h  ReOrderColors.h  ResizeTriangle.h  VerticalLevelMeter.h  VoxProLookAndFeel.cpp  VoxProLookAndFeel.h  WidthModule.h
Source/UI/LookAndFeel/: ReOrderLookAndFeel.h
Specs/: HAAS_PLUGIN_UI_SPEC.md  IMPLEMENTATION_PLAN.md  TDD_IMPLEMENTATION_PLAN.md  haas-plugin-ui.jsx
Standalone/Haas Align Delay.app/Contents/: Info.plist
Tests/: PluginProcessorParamTest.cpp  TestMain.cpp
Tests/DSP/: CorrectionSpeedTest.cpp  DelayLinkTest.cpp  ModuleBypassTest.cpp  OutputGainTest.cpp  WidthLowCutTest.cpp
Tests/Integration/: FullPluginTest.cpp
Tests/Presets/: PresetManagerTest.cpp
Tests/UI/: AnimationSystemTest.cpp  ButtonLookAndFeelTest.cpp  DelayModuleTest.cpp  HeaderFooterTest.cpp  LinearSliderLookAndFeelTest.cpp  MeterStripTest.cpp  ModuleComponentTest.cpp  ModuleIconsTest.cpp  OutputModuleTest.cpp  PhaseCorrelationMeterTest.cpp  PhaseModuleTest.cpp  PluginEditorLayoutTest.cpp  PresetSelectorTest.cpp  ReOrderColorsTest.cpp  ReOrderLookAndFeelTest.cpp  VerticalLevelMeterTest.cpp  WidthModuleTest.cpp
VST3/Haas Align Delay.vst3/Contents/: Info.plist
VST3/Haas Align Delay.vst3/Contents/MacOS/: Haas Align Delay
VST3/Haas Align Delay.vst3/Contents/Resources/: moduleinfo.json
VST3/Haas Align Delay.vst3/Contents/_CodeSignature/: CodeResources
